fixed navbar paddings and btn padding in hamburger

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </span>
                 </div>
                 <div class="links">
-                    <a href="#">Главная</a>
+                    <a id="main_link" href="#">Главная</a>
                     <a href="https://s1rok1.gitbook.io/memories/">Документация</a>
                     <a href="https://discord.gg/JE2XQJ4Jan">Поддержка</a>
                     <a href="https://boosty.to/memories">Поддержите нас</a>
